 + Added new child skill; Salvage
 + Added UUID support!
 + Added SQL connection pooling and async loading!
 + Added new feature to Herbalism. Instantly-regrown crops are protected from being broken for 1 second
 + Added option to config.yml to show the /mcstats scoreboard automatically after logging in
 + Added option to config.yml for Alchemy. Skills.Alchemy.Prevent_Hopper_Transfer_Bottles
 + Added support for `MATERIAL|data` format in treasures.yml
 + Added API to experience events to get XP gain reason
 + Added API to check if an entity is bleeding
 + Added options to tools.yml and armor.yml config files to set a pretty repair material name
 + Added full support for repairables in tools.yml and armor.yml config files
 + Added new API class SkillAPI used to get a list of valid skill names
 + Added new API events for hardcore features, McMMOPlayerPreDeathPenaltyEvent, McMMOPlayerStatLossEvent and McMMOPlayerVampirismEvent
 + Added magical mod config file import command, for Cauldron 1.7+. Check wiki for usage
 = Fixed bug where pistons would mess with the block tracking
 = Fixed bug where the Updater was running on the main thread.
 = Fixed bug when players would use /ptp without being in a party
 = Fixed bug where player didn't have a mcMMOPlayer object in AsyncPlayerChatEvent
 = Fixed bug where dodge would check the wrong player skill level
 = Fixed bug which causes /party teleport to stop working
 = Fixed bug where SaveTimerTask would produce an IndexOutOfBoundsException
 = Fixed bug where Alchemy would not fire BrewEvents
 = Fixed bug with setting custom names and lore in treasures config
 = Fixed bug which would cause a NullPointerException with getFlowerAndGrassXp()
 = Fixed bug which could cause and SQLException regarding the connection property 'maxReconnects'.
 = Fixed bug where falling blocks were incorrectly tracked
 = Fixed bug where items would get deleted when in Berserk with a full inventory